שדרוג עיצוב ופונקציונליות: תמיכה בהוצאות קבועות, גרפים צבעוניים, UX מודרני, סנכרון בין מסכים

--- a/categories.html
+++ b/categories.html
@@ -296,233 +296,7 @@
   </section>
   <div id="toast" class="toast"></div>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script>
-    // קטגוריות עם אייקונים ואימוג'י
-    const categories = [
-      { name: 'שכר דירה', icon: 'fa-house', emoji: '🏠', color: '#ffb300' },
-      { name: 'חשבונות', icon: 'fa-file-invoice', emoji: '💡', color: '#00bcd4' },
-      { name: 'דלק', icon: 'fa-gas-pump', emoji: '⛽', color: '#ff7043' },
-      { name: 'גז (גפ״מ)', icon: 'fa-fire', emoji: '🔥', color: '#ff5252' },
-      { name: 'אוכל', icon: 'fa-utensils', emoji: '🛒', color: '#43a047' },
-      { name: 'בילויים', icon: 'fa-glass-cheers', emoji: '🎉', color: '#7e57c2' },
-      { name: 'ביגוד', icon: 'fa-tshirt', emoji: '👕', color: '#29b6f6' },
-      { name: 'פינוקים', icon: 'fa-ice-cream', emoji: '🍦', color: '#f06292' },
-      { name: 'כללי', icon: 'fa-ellipsis-h', emoji: '📦', color: '#607d8b' }
-    ];
-    let maxBudget = 0;
-    let transactions = [];
-    let selectedView = 'grid';
-    function loadData() {
-      const saved = JSON.parse(localStorage.getItem('budgetData'));
-      if (saved) {
-        maxBudget = saved.maxBudget;
-        transactions = saved.transactions;
-      }
-    }
-    function getCategoryByName(name) {
-      return categories.find(c => c.name === name) || { color: '#888', icon: 'fa-question', emoji: '❓' };
-    }
-    window.addEventListener('DOMContentLoaded', () => {
-      loadData();
-      // theme toggle
-      document.getElementById('themeToggle').addEventListener('click', () => {
-        document.documentElement.classList.toggle('light-theme');
-        const icon = document.querySelector('#themeToggle i');
-        icon.className = document.documentElement.classList.contains('light-theme') ? 'fas fa-sun' : 'fas fa-moon';
-      });
-      // build category selector
-      const selDiv = document.getElementById('categorySelector');
-      function renderSelector(filter = '') {
-        selDiv.innerHTML = '';
-        const savedCats = JSON.parse(localStorage.getItem('selectedCategories')) || [];
-        categories.filter(cat => cat.name.includes(filter)).forEach(cat => {
-          const btn = document.createElement('button');
-          btn.className = 'selector-btn' + (savedCats.includes(cat.name) ? ' selected' : '');
-          btn.innerHTML = `<span class="cat-icon">${cat.emoji}</span> ${cat.name}`;
-          btn.onclick = () => {
-            let selected = JSON.parse(localStorage.getItem('selectedCategories')) || [];
-            if (selected.includes(cat.name)) selected = selected.filter(c => c !== cat.name);
-            else selected.push(cat.name);
-            localStorage.setItem('selectedCategories', JSON.stringify(selected));
-            renderSelector(document.getElementById('catSearch').value.trim());
-          };
-          selDiv.appendChild(btn);
-        });
-      }
-      renderSelector();
-      // חיפוש קטגוריה
-      document.getElementById('catSearch').addEventListener('input', e => {
-        renderSelector(e.target.value.trim());
-      });
-      // תצוגת Grid/List
-      document.getElementById('gridViewBtn').addEventListener('click', () => {
-        selectedView = 'grid';
-        document.getElementById('category-charts').style.display = 'grid';
-        document.getElementById('gridViewBtn').classList.add('active');
-        document.getElementById('listViewBtn').classList.remove('active');
-      });
-      document.getElementById('listViewBtn').addEventListener('click', () => {
-        selectedView = 'list';
-        document.getElementById('category-charts').style.display = 'flex';
-        document.getElementById('category-charts').style.flexDirection = 'column';
-        document.getElementById('gridViewBtn').classList.remove('active');
-        document.getElementById('listViewBtn').classList.add('active');
-      });
-      // פונקציה להצגת הגרפים
-      function renderCharts() {
-        const checked = (JSON.parse(localStorage.getItem('selectedCategories')) || []);
-        const container = document.getElementById('category-charts');
-        container.innerHTML = '';
-        if (!checked.length) {
-          container.innerHTML = '<p class="no-cat">לא נוספו עדיין קטגוריות - נא להוסיף :)</p>';
-          return;
-        }
-        const expenses = transactions.filter(t => t.type === 'expense');
-        checked.forEach((catName, idx) => {
-          const cat = getCategoryByName(catName);
-          const sum = expenses.filter(t => t.category === catName).reduce((s, t) => s + t.amount, 0);
-          // צבע רקע משתנה לפי אחוז ניצול
-          let percent = maxBudget ? sum / maxBudget : 0;
-          let bg = `linear-gradient(135deg, ${cat.color}22 0%, var(--card-bg) 100%)`;
-          if (percent > 1) bg = `linear-gradient(135deg, #ff4444 0%, var(--card-bg) 100%)`;
-          else if (percent > 0.8) bg = `linear-gradient(135deg, #ff9800 0%, var(--card-bg) 100%)`;
-          else if (percent > 0.5) bg = `linear-gradient(135deg, #00c851 0%, var(--card-bg) 100%)`;
-          const card = document.createElement('div');
-          card.className = 'cat-card';
-          card.style.background = bg;
-          // כותרת ואייקון
-          card.innerHTML = `
-            <div class="cat-header">
-              <span class="cat-icon"><i class="fas ${cat.icon}"></i> ${cat.emoji}</span>
-              <span class="cat-title">${catName}</span>
-            </div>
-            <canvas id="catChart${idx}"></canvas>
-            <div class="cat-actions">
-              <input type="text" id="descInput${idx}" placeholder="תיאור הוצאה">
-              <input type="number" id="amountInput${idx}" placeholder="סכום" min="0">
-              <button class="addCatExpenseBtn" data-cat="${catName}" data-idx="${idx}"><i class="fas fa-plus"></i> הוסף הוצאה</button>
-            </div>
-            <ul class="cat-expense-list" id="expenseList${idx}"></ul>
-          `;
-          container.appendChild(card);
-          // גרף עוגה צבעוני
-          const ctx = card.querySelector('canvas').getContext('2d');
-          new Chart(ctx, {
-            type: 'doughnut',
-            data: {
-              datasets: [{
-                data: [sum, Math.max(maxBudget - sum, 0)],
-                backgroundColor: [cat.color, '#424242'],
-                borderWidth: 0,
-              }]
-            },
-            options: {
-              cutout: '70%',
-              responsive: true,
-              animation: { animateRotate: true, duration: 1200 },
-              plugins: {
-                legend: { display: false },
-                tooltip: { enabled: false }
-              }
-            },
-            plugins: [{
-              id: 'centerText',
-              beforeDraw(chart) {
-                const { ctx, chartArea: { width, height, left, top } } = chart;
-                ctx.save();
-                ctx.font = 'bold 16px Assistant';
-                ctx.fillStyle = getComputedStyle(document.documentElement).getPropertyValue('--text');
-                ctx.textAlign = 'center';
-                ctx.textBaseline = 'middle';
-                ctx.fillText(`${sum}/${maxBudget}`, left + width / 2, top + height / 2);
-                ctx.restore();
-              }
-            }]
-          });
-          // הצגת הוצאות בקטגוריה
-          const ul = card.querySelector(`#expenseList${idx}`);
-          const catExpenses = expenses.filter(t => t.category === catName);
-          catExpenses.slice(-5).reverse().forEach((exp, i) => {
-            const li = document.createElement('li');
-            li.innerHTML = `
-              <span>${exp.desc} <span style="color:#bbb;font-size:0.93em;">(${exp.amount}₪)</span></span>
-              <span class="expense-actions">
-                <button class="edit" title="ערוך"><i class="fas fa-pen"></i></button>
-                <button class="delete" title="מחק"><i class="fas fa-trash"></i></button>
-              </span>
-            `;
-            // עריכה
-            li.querySelector('.edit').onclick = () => {
-              const newDesc = prompt('ערוך תיאור:', exp.desc);
-              const newAmount = +prompt('ערוך סכום:', exp.amount);
-              if (newDesc && newAmount > 0) {
-                exp.desc = newDesc;
-                exp.amount = newAmount;
-                localStorage.setItem('budgetData', JSON.stringify({ maxBudget, transactions, capital:0 }));
-                renderCharts();
-                showToast('הוצאה עודכנה!');
-              }
-            };
-            // מחיקה
-            li.querySelector('.delete').onclick = () => {
-              if (confirm('למחוק הוצאה זו?')) {
-                const idx = transactions.indexOf(exp);
-                if (idx > -1) transactions.splice(idx, 1);
-                localStorage.setItem('budgetData', JSON.stringify({ maxBudget, transactions, capital:0 }));
-                renderCharts();
-                showToast('הוצאה נמחקה!');
-              }
-            };
-            ul.appendChild(li);
-          });
-          // הוספת הוצאה
-          card.querySelector('.addCatExpenseBtn').addEventListener('click', (e) => {
-            const index = e.target.dataset.idx;
-            const category = e.target.dataset.cat;
-            const desc = document.getElementById(`descInput${index}`).value.trim();
-            const amount = +document.getElementById(`amountInput${index}`).value;
-            if(desc && amount > 0) {
-              const dateTime = new Date().toISOString().slice(0,16);
-              transactions.push({ type:'expense', amount, desc, date:dateTime, category });
-              localStorage.setItem('budgetData', JSON.stringify({ maxBudget, transactions, capital:0 }));
-              renderCharts();
-              showToast('הוצאה נוספה!');
-            } else {
-              showToast('אנא מלא תיאור וסכום תקינים');
-            }
-          });
-        });
-        // תצוגת Grid/List
-        if (selectedView === 'list') {
-          container.style.display = 'flex';
-          container.style.flexDirection = 'column';
-          container.style.gap = 'var(--list-gap)';
-        } else {
-          container.style.display = 'grid';
-          container.style.gridTemplateColumns = 'repeat(auto-fit, minmax(220px, 1fr))';
-          container.style.gap = 'var(--cat-gap)';
-        }
-      }
-      // attach buttons
-      document.getElementById('addChartsBtn').addEventListener('click', renderCharts);
-      document.getElementById('closeChartsBtn').addEventListener('click', () => {
-        localStorage.removeItem('selectedCategories');
-        renderSelector(document.getElementById('catSearch').value.trim());
-        document.getElementById('category-charts').innerHTML = '<p class="no-cat">לא נוספו עדיין קטגוריות - נא להוסיף :)</p>';
-      });
-      // load saved selections
-      const savedCats = JSON.parse(localStorage.getItem('selectedCategories')) || [];
-      if (savedCats.length) renderCharts();
-    });
-    function showToast(msg) {
-      const toast = document.getElementById('toast');
-      toast.textContent = msg;
-      toast.classList.add('show');
-      setTimeout(() => {
-        toast.classList.remove('show');
-      }, 2000);
-    }
-  </script>
+  <script src="script.js"></script>
   <footer>© 2025 ניהול תקציב</footer>
 </body>
 </html> 
