--- a/index.html
+++ b/index.html
@@ -383,351 +383,7 @@
   </section>
   <div id="toast" class="toast"></div>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script>
-    // קטגוריות עם אייקונים ואימוג'י
-    const categoryIcons = {
-      'שכר דירה': { icon: 'fa-house', emoji: '🏠', color: '#ffb300' },
-      'חשבונות': { icon: 'fa-file-invoice', emoji: '💡', color: '#00bcd4' },
-      'דלק': { icon: 'fa-gas-pump', emoji: '⛽', color: '#ff7043' },
-      'גז (גפ״מ)': { icon: 'fa-fire', emoji: '🔥', color: '#ff5252' },
-      'אוכל': { icon: 'fa-utensils', emoji: '🛒', color: '#43a047' },
-      'בילויים': { icon: 'fa-glass-cheers', emoji: '🎉', color: '#7e57c2' },
-      'ביגוד': { icon: 'fa-tshirt', emoji: '👕', color: '#29b6f6' },
-      'פינוקים': { icon: 'fa-ice-cream', emoji: '🍦', color: '#f06292' },
-      'כללי': { icon: 'fa-ellipsis-h', emoji: '📦', color: '#607d8b' }
-    };
-    // data & storage
-    let maxBudget = 0, current = 0, capital = 0;
-    let transactions = [];
-    let fixedExpenses = [];
-    function saveData() {
-      localStorage.setItem('budgetData', JSON.stringify({maxBudget, transactions, capital, fixedExpenses}));
-    }
-    function loadData() {
-      const saved = JSON.parse(localStorage.getItem('budgetData'));
-      if(saved) {
-        maxBudget = saved.maxBudget;
-        transactions = saved.transactions;
-        fixedExpenses = saved.fixedExpenses || [];
-        current = transactions.filter(t=>t.type==='expense').reduce((sum,t)=>sum+t.amount,0);
-        if(saved.capital !== undefined) capital = saved.capital;
-      }
-    }
-    // setup charts
-    const expenseCtx = document.getElementById('expenseChart').getContext('2d');
-    const data = { datasets:[{data:[0,0], backgroundColor:['var(--accent)', '#424242'], borderWidth:0}]};
-    const options = { cutout:'70%', responsive:true, animation:{duration:1200,easing:'easeOutQuart'}, plugins:{legend:{display:false}, tooltip:{enabled:true}} };
-    const centerTextPlugin = { 
-      id:'centerText', 
-      beforeDraw(chart) { 
-        const{ctx,chartArea:{width,height,left,top}}=chart; 
-        ctx.save(); 
-        ctx.font='bold 22px Assistant'; 
-        ctx.fillStyle=getComputedStyle(document.documentElement).getPropertyValue('--text'); 
-        ctx.textAlign='center'; 
-        ctx.textBaseline='middle'; 
-        let fixedSum = fixedExpenses.reduce((s, f) => s + Number(f.amount), 0);
-        ctx.fillText(`נשאר לך: ${maxBudget-current-fixedSum} ₪`, left+width/2, top+height/2-10);
-        ctx.font='16px Assistant';
-        ctx.fillText(`מתוך ${maxBudget} ₪`, left+width/2, top+height/2+16);
-        ctx.restore(); 
-      } 
-    };
-    const expenseChart = new Chart(expenseCtx,{type:'doughnut',data:data,options:options,plugins:[centerTextPlugin]});
-    // UI elements
-    const transactionsList = document.getElementById('transactions');
-    const categorySelect = document.getElementById('categorySelect');
-    function showToast(msg) {
-      const toast = document.getElementById('toast');
-      toast.textContent = msg;
-      toast.classList.add('show');
-      setTimeout(() => {
-        toast.classList.remove('show');
-      }, 3000);
-    }
-    function updateStatusText() {
-      let fixedSum = fixedExpenses.reduce((s, f) => s + Number(f.amount), 0);
-      let percent = maxBudget ? (current + fixedSum) / maxBudget : 0;
-      let status = 'status-green';
-      if (percent > 0.9) status = 'status-red';
-      else if (percent > 0.6) status = 'status-orange';
-      document.getElementById('statusText').className = 'status-budget ' + status;
-      document.getElementById('statusText').textContent = `נשאר לך: ${maxBudget-current-fixedSum} ₪ מתוך ${maxBudget} ₪`;
-    }
-    function updateCapitalText() { document.getElementById('capitalText').textContent=`ההון שלך הוא: ${capital} ₪`; }
-    function updateTransactionsList() {
-      transactionsList.innerHTML='';
-      transactions.slice().reverse().forEach(t=>{
-        const li=document.createElement('li');
-        li.className = 'expense-item';
-        const cat = categoryIcons[t.category] || {icon:'fa-question',emoji:'❓',color:'#888'};
-        const dt = t.date ? t.date.replace('T', ' ') : 'תאריך לא ידוע';
-        li.innerHTML = `
-          <span class="expense-icon" style="color:${cat.color}"><i class="fas ${cat.icon}"></i> ${cat.emoji}</span>
-          <span class="expense-cat">${t.category}</span>
-          <span class="expense-amount">${t.amount} ₪</span>
-          <span>${t.desc}</span>
-          <span class="expense-date">${dt}</span>
-        `;
-        transactionsList.append(li);
-      });
-    }
-    function updateExpenseChart() {
-      let fixedSum = fixedExpenses.reduce((s, f) => s + Number(f.amount), 0);
-      let percent = maxBudget ? (current + fixedSum) / maxBudget : 0;
-      let color = '#00c851';
-      if (percent > 0.9) color = '#ff4444';
-      else if (percent > 0.6) color = '#ff9800';
-      expenseChart.data.datasets[0].data=[fixedSum, current, Math.max(maxBudget-current-fixedSum,0)];
-      expenseChart.data.datasets[0].backgroundColor=["#888", color, "#424242"];
-      expenseChart.update();
-    }
-    function updateAll() { updateStatusText(); updateCapitalText(); updateExpenseChart(); updateTransactionsList(); updateFixedExpensesList(); }
-    // events
-    document.getElementById('setMaxBtn').addEventListener('click',()=>{
-      const val=+document.getElementById('maxInput').value;
-      if(val>0){
-        maxBudget=val;
-        saveData();
-        updateAll();
-        showToast('תקציב הוגדר!');
-      }
-    });
-    document.getElementById('addExpenseBtn').addEventListener('click', () => {
-      const desc = document.getElementById('expenseDescInput').value.trim();
-      const category = categorySelect.value;
-      const now = new Date();
-      const pad = num => String(num).padStart(2, '0');
-      const year = now.getFullYear();
-      const month = pad(now.getMonth() + 1);
-      const day = pad(now.getDate());
-      const hours = pad(now.getHours());
-      const minutes = pad(now.getMinutes());
-      const dateTime = `${year}-${month}-${day}T${hours}:${minutes}`;
-      const val = +document.getElementById('expenseInput').value;
-      if (desc && val > 0) {
-        const t = { type: 'expense', amount: val, desc, date: dateTime, category };
-        transactions.push(t);
-        current += val;
-        saveData();
-        updateAll();
-        showToast(current > maxBudget ? 'חרגת מהתקציב!' : 'הוצאה נוספה!');
-        document.getElementById('expenseDescInput').value = '';
-        document.getElementById('expenseInput').value = '';
-      } else {
-        showToast('אנא מלא תיאור וסכום');
-      }
-    });
-    function handleActionBtn(id, fn) {
-      document.getElementById(id).addEventListener('click', fn);
-      document.getElementById(id+'Dropdown').addEventListener('click', fn);
-    }
-    handleActionBtn('resetBtn',()=>{ current=0; transactions=[]; saveData(); updateAll(); });
-    handleActionBtn('exportBtn',()=>{ let csv='type,desc,amount,date\n'; transactions.forEach(t=>csv+=`${t.type},${t.desc},${t.amount},${t.date}\n`); const blob=new Blob([csv],{type:'text/csv'}), url=URL.createObjectURL(blob); const a=document.createElement('a'); a.href=url; a.download='transactions.csv'; a.click(); URL.revokeObjectURL(url); });
-    document.getElementById('themeToggle').addEventListener('click',()=>{
-      document.documentElement.classList.toggle('light-theme');
-      const icon = document.querySelector('#themeToggle i');
-      icon.className = document.documentElement.classList.contains('light-theme') ? 'fas fa-sun' : 'fas fa-moon';
-      updateAll();
-    });
-    document.getElementById('setCapitalBtn').addEventListener('click', () => {
-      const val = +document.getElementById('capitalInput').value;
-      if(!isNaN(val) && val >= 0) {
-        capital = val;
-        saveData();
-        updateCapitalText();
-        document.getElementById('capitalInput').value = '';
-        showToast('ההון התעדכן!');
-      } else {
-        showToast('אנא הזן ערך הון חוקי');
-      }
-    });
-    handleActionBtn('backupBtn', () => {
-      const backupData = JSON.stringify({maxBudget, transactions, capital, fixedExpenses});
-      const blob = new Blob([backupData], {type: 'application/json'});
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url;
-      a.download = 'budget_backup.json';
-      a.click();
-      URL.revokeObjectURL(url);
-      showToast('גיבוי נוצר בהצלחה!');
-    });
-    handleActionBtn('restoreBtn', () => {
-      const fileInput = document.createElement('input');
-      fileInput.type = 'file';
-      fileInput.accept = '.json';
-      fileInput.style.display = 'none';
-      document.body.appendChild(fileInput);
-      fileInput.addEventListener('change', (e) => {
-        const file = e.target.files[0];
-        if (!file) {
-          document.body.removeChild(fileInput);
-          return;
-        }
-        const reader = new FileReader();
-        reader.onload = (event) => {
-          try {
-            const data = JSON.parse(event.target.result);
-            if (data && data.maxBudget !== undefined && Array.isArray(data.transactions)) {
-              maxBudget = data.maxBudget;
-              transactions = data.transactions;
-              capital = data.capital || 0;
-              fixedExpenses = data.fixedExpenses || [];
-              current = transactions.filter(t=>t.type==='expense').reduce((sum,t)=>sum+t.amount,0);
-              saveData();
-              updateAll();
-              showToast('נתונים שוחזרו בהצלחה!');
-            } else {
-              showToast('פורמט קובץ לא תקין!');
-            }
-          } catch (err) {
-            showToast('שגיאה בשחזור הנתונים!');
-          }
-          document.body.removeChild(fileInput);
-        };
-        reader.readAsText(file);
-      });
-      fileInput.click();
-    });
-    // More options popup (mobile & desktop)
-    const moreBtn = document.getElementById('moreBtn');
-    const popupMenu = document.getElementById('popupMenu');
-    let popupOpen = false;
-    function openPopup() {
-      popupMenu.style.display = 'flex';
-      popupOpen = true;
-    }
-    function closePopup() {
-      popupMenu.style.display = 'none';
-      popupOpen = false;
-    }
-    moreBtn.addEventListener('click', (e) => {
-      e.stopPropagation();
-      if (popupOpen) closePopup();
-      else openPopup();
-    });
-    document.body.addEventListener('click', (e) => {
-      if (popupOpen && !moreBtn.contains(e.target) && !popupMenu.contains(e.target)) {
-        closePopup();
-      }
-    }, true);
-    window.addEventListener('scroll', closePopup, true);
-    popupMenu.querySelectorAll('button').forEach(btn => {
-      btn.addEventListener('click', closePopup);
-    });
-    // חיבור פעולות
-    function handlePopupBtn(id, fn) {
-      document.getElementById(id).addEventListener('click', fn);
-    }
-    handlePopupBtn('resetBtnPopup',()=>{ current=0; transactions=[]; saveData(); updateAll(); });
-    handlePopupBtn('exportBtnPopup',()=>{ let csv='type,desc,amount,date\n'; transactions.forEach(t=>csv+=`${t.type},${t.desc},${t.amount},${t.date}\n`); const blob=new Blob([csv],{type:'text/csv'}), url=URL.createObjectURL(blob); const a=document.createElement('a'); a.href=url; a.download='transactions.csv'; a.click(); URL.revokeObjectURL(url); });
-    handlePopupBtn('backupBtnPopup', () => {
-      const backupData = JSON.stringify({maxBudget, transactions, capital, fixedExpenses});
-      const blob = new Blob([backupData], {type: 'application/json'});
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url;
-      a.download = 'budget_backup.json';
-      a.click();
-      URL.revokeObjectURL(url);
-      showToast('גיבוי נוצר בהצלחה!');
-    });
-    handlePopupBtn('restoreBtnPopup', () => {
-      const fileInput = document.createElement('input');
-      fileInput.type = 'file';
-      fileInput.accept = '.json';
-      fileInput.style.display = 'none';
-      document.body.appendChild(fileInput);
-      fileInput.addEventListener('change', (e) => {
-        const file = e.target.files[0];
-        if (!file) {
-          document.body.removeChild(fileInput);
-          return;
-        }
-        const reader = new FileReader();
-        reader.onload = (event) => {
-          try {
-            const data = JSON.parse(event.target.result);
-            if (data && data.maxBudget !== undefined && Array.isArray(data.transactions)) {
-              maxBudget = data.maxBudget;
-              transactions = data.transactions;
-              capital = data.capital || 0;
-              fixedExpenses = data.fixedExpenses || [];
-              current = transactions.filter(t=>t.type==='expense').reduce((sum,t)=>sum+t.amount,0);
-              saveData();
-              updateAll();
-              showToast('נתונים שוחזרו בהצלחה!');
-            } else {
-              showToast('פורמט קובץ לא תקין!');
-            }
-          } catch (err) {
-            showToast('שגיאה בשחזור הנתונים!');
-          }
-          document.body.removeChild(fileInput);
-        };
-        reader.readAsText(file);
-      });
-      fileInput.click();
-    });
-    // הוצאות קבועות - UI
-    function updateFixedExpensesList() {
-      const ul = document.getElementById('fixedExpensesList');
-      ul.innerHTML = '';
-      if (!fixedExpenses.length) {
-        ul.innerHTML = '<li style="color:#bbb;text-align:center;">לא הוגדרו הוצאות קבועות</li>';
-        return;
-      }
-      fixedExpenses.forEach((f, i) => {
-        const li = document.createElement('li');
-        li.className = 'expense-item';
-        li.innerHTML = `
-          <span class="expense-icon" style="color:#888"><i class="fas fa-thumbtack"></i></span>
-          <span class="expense-cat">${f.desc}</span>
-          <span class="expense-amount">${f.amount} ₪</span>
-          <button class="action-btn edit-fixed" style="background:#1976d2;padding:4px 10px;font-size:0.95em;">ערוך</button>
-          <button class="action-btn delete-fixed" style="background:#ff4444;padding:4px 10px;font-size:0.95em;">מחק</button>
-        `;
-        li.querySelector('.edit-fixed').onclick = () => {
-          const newDesc = prompt('ערוך תיאור:', f.desc);
-          const newAmount = +prompt('ערוך סכום:', f.amount);
-          if (newDesc && newAmount > 0) {
-            f.desc = newDesc;
-            f.amount = newAmount;
-            saveData();
-            updateAll();
-            showToast('עודכן!');
-          }
-        };
-        li.querySelector('.delete-fixed').onclick = () => {
-          if (confirm('למחוק הוצאה קבועה זו?')) {
-            fixedExpenses.splice(i, 1);
-            saveData();
-            updateAll();
-            showToast('נמחק!');
-          }
-        };
-        ul.appendChild(li);
-      });
-    }
-    document.getElementById('addFixedExpenseForm').addEventListener('submit', e => {
-      e.preventDefault();
-      const desc = document.getElementById('fixedDescInput').value.trim();
-      const amount = +document.getElementById('fixedAmountInput').value;
-      if (desc && amount > 0) {
-        fixedExpenses.push({ desc, amount });
-        saveData();
-        updateAll();
-        document.getElementById('fixedDescInput').value = '';
-        document.getElementById('fixedAmountInput').value = '';
-        showToast('הוצאה קבועה נוספה!');
-      } else {
-        showToast('אנא מלא תיאור וסכום תקינים');
-      }
-    });
-    // init
-    loadData(); updateAll();
-  </script>
+  <script src="script.js"></script>
   <footer>© 2025 ניהול תקציב</footer>
   <p style="text-align: center; margin-top: 10px; font-size: 0.8rem; opacity: 0.7;">
     הנתונים נשמרים אוטומטית במכשיר שלך. גם אם תסגור את הדף, המידע יישמר.
