--- a/categories.html
+++ b/categories.html
@@ -6,6 +6,7 @@
   <title>גרפי קטגוריות</title>
   <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;700&family=Rubik:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <link rel="stylesheet" href="styles.css">
   <style>
     :root {
       --bg-gradient: linear-gradient(135deg, #232526 0%, #414345 100%);
@@ -273,6 +274,7 @@
   </style>
 </head>
 <body>
+  <div id="loader" class="loader"></div>
   <header>
     <h1>גרפי קטגוריות</h1>
     <a href="index.html" class="cat-toggle" title="חזרה לניהול תקציב"><i class="fas fa-th-large"></i></a>
@@ -296,7 +298,8 @@
   </section>
   <div id="toast" class="toast"></div>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="script.js"></script>
-  <footer>© 2025 ניהול תקציב</footer>
+  <script src="utils.js"></script>
+  <script src="categories.js"></script>
+  <footer>© 2026 ניהול תקציב</footer>
 </body>
 </html> 
