--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>ניהול תקציב</title>
   <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;700&family=Rubik:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <link rel="stylesheet" href="styles.css">
   <style>
     :root {
       --bg-gradient: linear-gradient(135deg, #232526 0%, #414345 100%);
@@ -310,6 +311,7 @@
   </style>
 </head>
 <body>
+  <div id="loader" class="loader"></div>
   <header>
     <span class="header-icon"><i class="fas fa-chart-pie"></i></span>
     <h1>ניהול תקציב</h1>
@@ -383,8 +385,9 @@
   </section>
   <div id="toast" class="toast"></div>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="script.js"></script>
-  <footer>© 2025 ניהול תקציב</footer>
+  <script src="utils.js"></script>
+  <script src="index.js"></script>
+  <footer>© 2026 ניהול תקציב</footer>
   <p style="text-align: center; margin-top: 10px; font-size: 0.8rem; opacity: 0.7;">
     הנתונים נשמרים אוטומטית במכשיר שלך. גם אם תסגור את הדף, המידע יישמר.
   </p>
